# Centrum-Launcher

./: Cargo.toml  LICENSE  README.md
src/: config.rs  controller.rs  main.rs  search.rs  ui.rs  utils.rs
src/modules/: app_edit.rs  app_launcher.rs  color_picker.rs  file_search.rs  mod.rs  power_menu.rs  web_search.rs
src/resources/: config.css  dark.css  light.css
src/wm/: generic.rs  hyprland.rs  mod.rs  niri.rs
