[package]
name = "centrum-launcher"
version = "1.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
directories = "6.0.0"
fuzzy-matcher = "0.3.7"
gio = "0.21.5"
glib = "0.21.5"
gtk4 = { version = "0.10.3", features = ["v4_10"] }
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.146"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true